# comfyui-MGnodes

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
examples/: Image_Watermark.json
nodes/: chain_of_thought_processor_node.py  egtjtxsy.py  flux_kontext_diff_merge.py  image_watermark_node.py  text_watermark_node.py  watermark_node.py  watermark_overlay.py
