[project]
name = "MGnodes"
description = "Assorted custom nodes with a focus on simplicity and usability including watermark node and others focused on customizing my comfy experience."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/meanin2/comfyui-MGnodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-MGnodes"
Icon = ""
